--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -10298,8 +10299,8 @@ header.masthead .masthead-heading {
   position: absolute;
   z-index: 100;
   left: 0;
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   margin-left: 0;
   text-align: center;
   color: white;
@@ -10332,9 +10333,11 @@ header.masthead .masthead-heading {
 .timeline > li:last-child {
   margin-bottom: 0;
 }
-.timeline .timeline-heading h4 {
+.timeline .timeline-heading h5 {
   margin-top: 0;
+  padding-top: 0px;
   color: inherit;
+  
 }
 .timeline .timeline-heading h4.subheading {
   text-transform: none;
@@ -10374,6 +10377,12 @@ header.masthead .masthead-heading {
     padding: 0 30px 20px 20px;
     text-align: left;
   }
+  .timeline-image svg{
+    margin-top:15px;
+    padding:10px;
+    width: 60px;
+    height: 60px;
+  }
 }
 @media (min-width: 992px) {
   .timeline > li {
@@ -10388,12 +10397,18 @@ header.masthead .masthead-heading {
     margin-left: -75px;
   }
   .timeline > li .timeline-image h4 {
-    font-size: 18px;
-    line-height: 26px;
-    margin-top: 30px;
+    font-size: 14px;
+    margin-top: 40px;
   }
+  
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 20px 20px;
+  }
+  .timeline-image svg{
+    margin-top:25px;
+    padding:10px;
+    width: 80px;
+    height: 80px;
   }
 }
 @media (min-width: 1200px) {
@@ -10409,12 +10424,25 @@ header.masthead .masthead-heading {
     margin-left: -85px;
   }
   .timeline > li .timeline-image h4 {
-    margin-top: 40px;
+    margin-top: 50px;
+
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 100px 20px 20px;
   }
+
+  .timeline-image svg{
+    margin-top:25px;
+    padding:10px;
+    width: 100px;
+    height: 100px;
+  }
 }
+.contactnsib a{
+  color:#242424;
+}
+
+
 .team-member {
   margin-bottom: 3rem;
   text-align: center;
@@ -10652,7 +10680,6 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 
-
 .offer-item {
   margin-top: 40px;
   overflow: hidden;
@@ -10677,6 +10704,9 @@ section#contact form#contactForm :-ms-input-placeholder {
 .offer-content h4 {
   margin-bottom: 30px;
   font-weight: normal;
+  background-color: #007bff;
+  padding:10px 10px;
+  color:yellow;
 }
 
 .offer-content p {
@@ -10745,6 +10775,7 @@ section#contact form#contactForm :-ms-input-placeholder {
   background-color: #0b0475fa;
   display: block;
   max-width: 600px;
+  display:none;
 }
 .listdiv{
   text-align: left;
@@ -10763,4 +10794,14 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-weight: 600;
   color:yellow;
   padding-top:20px;
+}
+.crvalueimg{
+  padding-bottom:40px;
+}
+.crvalueimg img{
+  width:100%;
+  max-width:400px;
+}
+.thvent{
+  max-width:800px;
 }
